Update chemical stacks bringing them more in line with modern item and fluid stacks